--- a/src/App.css
+++ b/src/App.css
@@ -104,12 +104,16 @@ span {
   border-bottom: 1px solid rgb(158, 41, 41);
 }
 
-a {
+.more-info {
   color: rgb(255, 232, 31);
   text-decoration: none;
   font-size: 16px;
   padding-top: 20px;
   display: block;
+}
+
+.more-info:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 880px) {
